1. Fixed issue for new test case adding player to multiple positions 2. Implemented sonarlint suggestions